Fix bug where toast would be visible on screen resize

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,3 +50,8 @@ body {
   position: relative;
   overflow: hidden;
 }
+
+.resize-animation-stopper * {
+  transition: none !important;
+  animation: none !important;
+}
